# grove

./: .coveragerc  .darglint  .gitignore  AGENTS.md  README.md  justfile  mkdocs.yml  pyproject.toml
.agents/skills/memory-writeback/: SKILL.md
.ai/: RULES.md
.ai/COMMANDS/: pr.md
.ai/PLANS/: 001-grove-cli-core-engine.md  002-grove-cli-tui-init-flow.md  003-grove-add-sync-manage-mode.md  004-grove-polish-packaging.md  005-grove-phase2-composition.md  006-grove-remove-and-doctor.md
.ai/REF/project-types/: cli-tool.md
.ai/SPECS/001-grove-cli/: PRD.md
.ai/SPECS/002-grove-phase2-composition/: PRD.md
.github/workflows/: ci.yml  pr_template_check.yml
docs/: cli.md  color_scheme.md  concept.md  index.md  pack-author-guide.md
docs/dev/: roadmap.md  status.md
docs/dev/debt/: debt_tracker.md
src/grove/: __init__.py  exceptions.py
src/grove/analyzer/: __init__.py  engine.py  models.py
src/grove/analyzer/detectors/: __init__.py  _pyproject.py  base.py  mypy.py  pyproject.py  pytest.py  ruff.py  uv.py
src/grove/cli/: __init__.py  app.py
src/grove/core/: __init__.py  add.py  add_apply.py  add_impl.py  composer.py  doctor.py  doctor_checks.py  file_ops.py  injections.py  manifest.py  markers.py  models.py  registry.py  remove.py  remove_apply.py  remove_impl.py  renderer.py  sync.py  tool_hooks.py
src/grove/packs/: __init__.py  loader.py
src/grove/packs/builtins/base/: GROVE.md.j2  INDEX.md.j2  pack.toml
src/grove/packs/builtins/base/handoffs/: HANDOFF_TEMPLATE.md.j2
src/grove/packs/builtins/codex/: pack.toml
src/grove/packs/builtins/codex/hooks/: agents.md.j2
src/grove/packs/builtins/codex/skills/memory-writeback/: SKILL.md.j2
src/grove/packs/builtins/codex/skills/planning-execution/: SKILL.md.j2
src/grove/packs/builtins/commands/: pack.toml
src/grove/packs/builtins/commands/commands/: README.md.j2
src/grove/packs/builtins/knowledge/: pack.toml
src/grove/packs/builtins/knowledge/docs/: knowledge.md.j2
src/grove/packs/builtins/memory/: pack.toml
src/grove/packs/builtins/memory/memory/: README.md.j2
src/grove/packs/builtins/project-context/: pack.toml
src/grove/packs/builtins/project-context/docs/: project-context.md.j2
src/grove/packs/builtins/python/: pack.toml
src/grove/packs/builtins/python/rules/: python.md.j2
src/grove/packs/builtins/python/skills/: python-testing.md.j2
src/grove/packs/builtins/python/snippets/: grove_guidance.md.j2
src/grove/tui/: __init__.py  app.py  grove_init.tcss  state.py
src/grove/tui/screens/: __init__.py  analysis.py  base.py  components_preview.py  conflicts.py  core_install.py  final_review.py  finish.py  manage_dashboard.py  pack_config.py  recommended_packs.py  welcome.py
tests/: __init__.py
tests/e2e/: __init__.py  test_init_tui.py
tests/integration/: __init__.py  test_add_sync_configure.py  test_doctor.py  test_init.py  test_phase2_base_pack_slimming.py  test_phase2_codex_agents_shim.py  test_phase2_codex_skills_materialization.py  test_phase2_provenance_sync.py  test_remove.py
tests/unit/: test_placeholder.py
tests/unit/analyzer/: __init__.py  test_detectors.py  test_engine.py
tests/unit/core/: __init__.py  test_composer.py  test_doctor.py  test_doctor_pack_checks.py  test_file_ops.py  test_injections.py  test_manifest.py  test_markers.py  test_models.py  test_provenance.py  test_registry.py  test_remove.py  test_renderer.py  test_tool_hooks.py
tests/unit/packs/: __init__.py  test_loader.py
tests/unit/tui/: __init__.py  test_state.py
tests/unit/tui/screens/: test_pack_config.py  test_pack_config_screen.py
tmp/: 2026-03-16_22-21-33__Project-Grove-Grove-Development-Process__chat.json  2026-03-18_16-39-13__ChatGPT-Project-Grove__chat.json  cole_transcript.md
